Update to Java 21 (#915)
* Initial

* Fix Sonar issues

* Update with new Java 21 String formatting

* Update Dockerfile