@@ -10,7 +10,7 @@ public class SteamGridDbFeignClientConfiguration {
 
     @Bean
     public RequestInterceptor bearerTokenRequestInterceptor(@Value("${nincodedo.steamgriddbapikey}") String apiKey) {
-        return template -> template.header(AUTHORIZATION_HEADER, String.format("%s %s", TOKEN_TYPE, apiKey))
+        return template -> template.header(AUTHORIZATION_HEADER, "%s %s".formatted(TOKEN_TYPE, apiKey))
                 .header("User-Agent", "Ninbot (https://github.com/Nincodedo/Ninbot)");
     }
 }
